we added pictures and columns
co-authored-by: Brandon Magofna <magofna68@gmail.com>
co-authored-by: John Edmondson <edmondsonj@gmail.com>

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -8,6 +8,18 @@
   <title>Noahs extensive overcharged animal shelter</title>
 </head>
 <body>
-  <h1></h1></h1>
+  <h1></h1>
+  <div class="column">
+    <p>column 1: pet 1</p>
+  </div>
+  <div class="column">
+    <p>column 2: pet 2</p>
+  </div>
+  <div class="column">
+    <p>column 3: pet 3</p>
+  </div>
+  <div class="box-model">
+
+  </div>
 </body>
 </html>
