we made titles and background colors
co-authored-by: Brandon Magofna <magofna68@gmail.com>
co-authored-by: John Edmondson <edmondsonj@gmail.com>

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -4,22 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Noahs extensive overcharged animal shelter</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Noah's extensively overcharged animal shelter</title>
 </head>
 <body>
-  <h1></h1>
-  <div class="column">
-    <p>column 1: pet 1</p>
-  </div>
-  <div class="column">
-    <p>column 2: pet 2</p>
-  </div>
-  <div class="column">
-    <p>column 3: pet 3</p>
-  </div>
-  <div class="box-model">
-
+  <div class="container">
+    <h1>Noahs <span>extensively</span> overcharged animal shelter</h1>
+    <div class="column-container">
+      <div class="column">
+        <img width="100%" src="image/dog1.jpg">
+        <h2>Dog</h2>
+          <p>Dog</p>
+        </div>
+      <div class="column">
+        <img width="100%" src="image/dog2.jpg">
+        <h2><center>Golden Retriever</center></h2>
+        <p>rescue this animal nowwwww</p>
+      </div>
+      <div class="column">
+        <img width="100%" src="image/dog3.jpg">
+        <h2>Other Dog</h2>
+        <p>I never knew my parents. Send help</p>
+      </div>
+    </div>
+    <div class="box-model">
+      <img width="100%" src="image/dog-big.jpg">
+      <h2>French Bulldog</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam sed delectus dolore, in at laboriosam deserunt cumque odio dolorem culpa, accusamus accusantium eius possimus totam aut omnis vel. Sint, cum./p>
+    </div>
   </div>
 </body>
 </html>
